--- a/index.html
+++ b/index.html
@@ -5,12 +5,57 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="../css/style.css">
-	<title>Document</title>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="./css/style.css">
+	<title>2-nd course hw</title>
 </head>
 
 <body>
+	<header></header>
+	<main>
 
+		<div class="home">
+			<div class="container">
+				<h1 class="home__title">Добро пожаловать на мой сайт !</h1>
+				<p class="home__text">Вам предстоит пройти несколько увлекательных игр. Если готов нажимай
+					<span>поехали</span> и <span>приступай</span>
+				</p>
+				<a class="home__button button" href="#">Поехали!</a>
+			</div>
+		</div>
+
+		<section class="games">
+			<div class="container">
+				<div class="games__row">
+					<div class="games__item">
+						<a class="games__link" href="#">
+							<p class="games__text">Игра 1</p>
+							<img class="games__img" src="./img/g1.jpg" alt="Игра 1">
+							<div class="games__lg"></div>
+						</a>
+					</div>
+					<div class="games__item">
+						<a class="games__link" href="#">
+							<p class="games__text">Игра 2</p>
+							<img class="games__img" src="./img/g2.jpg" alt="Игра 2">
+							<div class="games__lg"></div>
+						</a>
+					</div>
+					<div class="games__item">
+						<a class="games__link" href="#">
+							<p class="games__text">Игра 3</p>
+							<img class="games__img" src="./img/g3.jpg" alt="Игра 3">
+							<div class="games__lg"></div>
+						</a>
+					</div>
+					</a>
+				</div>
+			</div>
+		</section>
+	</main>
+	<footer></footer>
 </body>
 
 </html>
