--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 	<header></header>
 	<main>
-
+		<!--  ============= home ============  -->
 		<div class="home">
 			<div class="container">
 				<h1 class="home__title">Добро пожаловать на мой сайт !</h1>
@@ -26,6 +26,7 @@
 			</div>
 		</div>
 
+		<!--  ============= games ============  -->
 		<section class="games">
 			<div class="container">
 				<div class="games__row">
@@ -54,9 +55,56 @@
 				</div>
 			</div>
 		</section>
-		<script src="./js/hw-2.js"></script>
+
+		<!--  ============= seasons ============  -->
+		<section class="seasons">
+			<div class="container">
+				<div class="seasons__body">
+					<div class="seasons__content block-content">
+						<h2 class="block-content__title">Времена года!</h2>
+						<p class="block-content__text">Нажмите кнопку играть, введите номер месяца (от 1 до 12) и вы узнаете к
+							какому времени года он относится</p>
+						<a href="#" class="block-content__button button">Поехали!</a>
+					</div>
+					<img class="seasons__img" src="../img/seasons.svg" alt="seasons picture">
+				</div>
+			</div>
+		</section>
+
+		<!--  ============= memorize ============  -->
+		<section class="memorize">
+			<div class="container">
+				<div class="memorize__body">
+					<img class="memorize__img" src="../img/memorize.svg" alt="memorize picture">
+					<div class="memorize__content block-content">
+						<h2 class="block-content__title">Запомни слова</h2>
+						<p class="block-content__text">При нажатии на кнопку играть, вы увидите несколько слов, которые вам
+							необходимо запомнить.</p>
+						<a href="#" class="block-content__button button">Играть</a>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<!--  ============= riddles-game ============  -->
+		<section class="riddles-game">
+			<div class="container">
+				<div class="riddles-game__content block-content">
+					<h2 class="block-content__title">Игра в загадки</h2>
+					<p class="block-content__text">Компьютер загадывает загадку, вам необходимо ее угадать, если вы дадите не
+						правильный ответ, то компьютер даст вам подсказку. У вас будет три попытки и две подсказки.</p>
+					<a href="#" class="block-content__button button riddles-game__button">Играть!</a>
+				</div>
+			</div>
+		</section>
 	</main>
-	<footer></footer>
+
+	<!--  ============= footer ============  -->
+	<footer class="footer">
+		<p class="footer__text">Все права защищены</p>
+	</footer>
+
+	<script src="./js/hw-3.js"></script>
 </body>
 
 </html>
