--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 						<h2 class="block-content__title">Времена года!</h2>
 						<p class="block-content__text">Нажмите кнопку играть, введите номер месяца (от 1 до 12) и вы узнаете к
 							какому времени года он относится</p>
-						<a href="#" class="block-content__button button">Поехали!</a>
+						<a href="#" class="block-content__button button" onclick="seasons();">Поехали!</a>
 					</div>
 					<img class="seasons__img" src="../img/seasons.svg" alt="seasons picture">
 				</div>
@@ -104,7 +104,7 @@
 		<p class="footer__text">Все права защищены</p>
 	</footer>
 
-	<script src="./js/hw-4.js"></script>
+	<script src="./js/hw-5.js"></script>
 </body>
 
 </html>
