--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 						<h2 class="block-content__title">Запомни слова</h2>
 						<p class="block-content__text">При нажатии на кнопку играть, вы увидите несколько слов, которые вам
 							необходимо запомнить.</p>
-						<a href="#" class="block-content__button button">Играть</a>
+						<a href="#" class="block-content__button button" onclick="memorizeWords()">Играть</a>
 					</div>
 				</div>
 			</div>
@@ -103,8 +103,8 @@
 	<footer class="footer">
 		<p class="footer__text">Все права защищены</p>
 	</footer>
-
-	<script src="./js/hw-6.js"></script>
+	<script src="./js/main.js"></script>
+	<script src="./js/hw-7.js"></script>
 </body>
 
 </html>
